--- a/cmms/templates/ejecutivo.html
+++ b/cmms/templates/ejecutivo.html
@@ -13,15 +13,18 @@
                 <!-- Include your chart code here -->
                 {{ context2|safe }}
             </div>
+           
             <h3 class="text-center">Se han registrado mantenimientos en las fechas:</h3>
 
             <ol class="list-group list-group-numbered">
                 {% for orden in mantenimientos %}
-                <li class="list-group-item">{{ orden.fecha }}: <em>{{ orden.actividad }}</em> , <strong>{{ orden.tipo }}</strong>  </li>
+                <li class="list-group-item">{{ orden.fecha }}: <em>{{ orden.actividad|truncatewords:6 }}</em> , <strong>{{ orden.tipo }}</strong>  </li>
                 {% endfor %}
               </ol>
 
-            <
+              <div class="col">
+                {{ context3|safe }}
+            </div>
         </div>
     </div>
 </section>
